2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-html.cpp:
	Add workaround for Gecko 1.9 accessibility issue
	bug #545162 - Ginn Chen

== 2.23.91 ==
	
2008-09-01  Don Scorgie  <dscorgie@svn.gnome.org>

	* NEWS:
	Version 2.23.91

	* src/yelp-utils.c (resolve_full_file):
	Make text files actually work (i.e. open external vewing program)

2008-09-01  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c (resolve_is_man_path):
	Don't crash when trying to load text files
	bug #549986 - Josselin Mouette

2008-08-14  J.H.M. Dassen (Ray)  <jdassen@debian.org>

	* src/yelp-info-parser.c (yelp_info_parser_parse_file):
	Allocate iter through g_slice_alloc0 instead of g_malloc0.
	iter is wrapped in a hash table and later freed by gtk_tree_iter_free,
	which uses g_slice_free.
	bug #520266, "Crash when viewing glibc manual".
	Analysis by Matthias Clasen.

2008-08-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.91.

==================== 2.23.2 ====================

2008-08-21  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 2.23.2

2008-08-12  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c (window_error):
	Fix string vulnerability
	bug #546364 - patch from Christian Persch
	reported by Aaron Grattafiori

2008-06-27  Luca Ferretti  <elle.uca@libero.it>

	* src/yelp-main.c: (main):
	* src/yelp-window.c: (window_about_cb):
	* yelp.desktop.in.in:

	Use "help-browser" named icon from fd.o icon naming spec
	instead deprecated "gnome-help".

=== 2.23.1 ===

2008-06-02  Don Scorgie  <dscorgie@svn.gnome.org>

	* NEWS:
	* configure.in:
	Version 2.23.1

2008-05-25  Don Scorgie  <dscorgie@svn.gnome.org>

	* yelp.desktop.in.in:
	Only show desktop entry in GNOME as
	other desktops will ship their own help browser
	bug #522994

2008-05-25  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c (window_print_document_cb):
	Fix printing whole document
	bug #525593
